# hippius-desktop

./: .gitignore  README.md  eslint.config.mjs  index.html  next.config.cjs  next.config.ts  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json
.github/workflows/: lint.yml  tauri-build.yml
app/: ResponsiveContent.tsx  globals.css  layout.tsx  metadata.tsx  not-found.tsx  page.tsx  status.html  tray.html  window.html  wssTest.tsx
app/(pages)/: OnBoardingGuard.tsx  ResponsiveContent.tsx  layout.tsx  page.tsx
app/(pages)/billing/: page.tsx
app/(pages)/files/: page.tsx
app/(pages)/notifications/: page.tsx
app/(pages)/referrals/: page.tsx
app/(pages)/settings/: page.tsx
app/(pages)/wallet/: page.tsx
app/components/: DeleteConfirmationDialog.tsx  DemoIpfsUpload.tsx  PageLoader.tsx  UpdateSuccessDialog.tsx  delete-confirmation-dialog.tsx  page-loader.tsx  update-dialog-wrapper.tsx  update-success-dialog.tsx
app/components/auth/: AccessKeyForm.tsx  AuthLayout.tsx  BaseAuthLayout.tsx  HippiusHeader.tsx  LeftCarouselPanel.tsx  Login.tsx  LoginWithPasscodeForm.tsx  PreAuthProvider.tsx  RestoreBackup.tsx  RestoreBackupForm.tsx  RightCarouselPanel.tsx  SetNewPasscodeForm.tsx  Signup.tsx  SignupForm.tsx  SwipeContent.tsx
app/components/blockchain-stats/: index.tsx
app/components/dashboard-title-wrapper/: BlockChainStats.tsx  CreditNotificationUpdater.tsx  HeaderText.tsx  ProfileCard.tsx  dashboardAtoms.ts  index.tsx
app/components/folder-upload-download/: index.tsx
app/components/get-set-sync-path/: index.tsx
app/components/page-sections/: index.tsx
app/components/progress-bar/: index.tsx
app/components/providers/: index.tsx
app/components/root-footer/: index.tsx
app/components/search-bar/: index.tsx
app/config/: constants.ts
app/data/: transactionsData.ts
app/lib/: config.ts  wallet-auth-context.tsx
app/login/: page.tsx
app/restore-backup/: page.tsx
app/signup/: page.tsx
app/utils/: folderPathUtils.ts  folderUrlUtils.ts
public/: ipfs-csv-template.csv
scripts/: release.sh
src-tauri/: Cargo.toml  Info.plist  entitlements.plist  metadata.scale  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/resources/awscli-macos-universal/aws-cli/: libcrypto.3.dylib  libssl.3.dylib
src-tauri/resources/awscli-macos-universal/aws-cli/wheel-0.45.1.dist-info/: RECORD  direct_url.json
src-tauri/resources/awscli-windows/AWSCLIV2/: _awscrt.pyd  _ruamel_yaml.cp313-win_amd64.pyd
src-tauri/resources/awscli-windows/AWSCLIV2/prompt_toolkit-3.0.51.dist-info/: METADATA  RECORD
src-tauri/resources/awscli-windows/AWSCLIV2/wheel-0.45.1.dist-info/: RECORD  direct_url.json
src-tauri/src/: events.rs  folder_sync.rs  ipfs.rs  lib.rs  main.rs  private_folder_sync.rs  public_folder_sync.rs  substrate_client.rs  sync_shared.rs  tray.rs  user_profile_sync.rs  user_storage_requests_sync.rs
src-tauri/src/builder_blocks/: mod.rs
src-tauri/src/builder_blocks/on_window_event/: mod.rs
src-tauri/src/builder_blocks/setup/: mod.rs
src-tauri/src/builder_blocks/system_tray/: mod.rs
src-tauri/src/commands/: accounts.rs  ipfs_commands.rs  mod.rs  node.rs  substrate_tx.rs  syncing.rs  types.rs
src-tauri/src/constants/: folder_sync.rs  ipfs.rs  mod.rs  substrate.rs
src-tauri/src/utils/: accounts.rs  binary.rs  file_operations.rs  folder_tree.rs  ipfs.rs  mod.rs  sync.rs
(+636 files in other folders)
