[package]
name = "Hippius"
version = "0.1.0"
description = "Hippius Desktop App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_project_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [
    'tray-icon',
    'image-ico',
    'image-png'
    ] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.45.1", features = ["full"] }
once_cell = "1.21.3"
dirs = "6.0.0"
lazy_static = "1.5.0"
flate2 = "1.1.2"
tar = "0.4.44"
reqwest = { version = "0.12", features = ["blocking", "multipart", "json"] }
zip = "4.2.0"
sodiumoxide = "0.2"
base64 = "0.21"
sha2 = "0.10"
subxt = { version = "0.38", features = ["substrate-compat"] }
sp-core = "34.0.0"
reed-solomon-erasure = "6.0.0"
uuid = { version = "1", features = ["v4"] }
tempfile = "3"
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-native-tls"] }
hex = "0.4"
parity-scale-codec = "3.6"
tauri-plugin-fs = "2"
notify = "6.1"
